calendar-webapp/src/main/webapp/vue-app/css/ExoEventForm.less
.drawer {
  width: 0px;
  position: fixed;
  top: 42px;
  right: 0;
  bottom: 0px;
  overflow: hidden;
  transition: 0.3s;
  background: #fff;
}

.drawer.open {
  width: 500px;
}

.drawer .header span {
  font-size: 17px;
  font-weight: bold;
}

.drawer .control-label {
  line-height: 25px;
}

.drawer .content {
    overflow-y: auto;
    overflow-x: hidden;
    height: 76%;
}

.drawer .content .eventTitle {
  width: 67%;
}

.drawer .content .category {
  width: 30%;
  margin-left: 5px;
}

.drawer .content .calDate {
  width: 49%;
  display: inline-block;
}

.drawer .content .location {
  width: 100%;
}

.drawer .content .participants {
  width: 100%;
}

.drawer .content .calDate input {
  padding: 0px;
}

.drawer .content .calDate [type="date"] {
  width: 56%;
}

.drawer .content .calDate [type="time"] {
  width: 42%;
}

.drawer .content .allday {
  margin-top: -16px;
}

.drawer .content .allday input {
  float: left;
  margin-right: 3px;
}

.drawer .content .calendarSelector {
  width: 40%;
  display: inline-block;
}

.drawer .content .calendarSelector select {
  width: 100%;
}

.drawer .content .description textarea {
  width: 100%;
  height: 120px;
}

.drawer .content .attachments textarea {
  margin-top: 15px;
  width: 100%;
}

.drawer .content .reminder {
  width: 25%;
  display: inline-block;
  margin-left: 10px;
  margin-right: 10px;
}

.drawer .content .repeat {
  width: 25%;
  display: inline-block;
}

.drawer > div {
  padding: 20px;
}

.drawer .content {
  padding-top: 10px;
}

.drawer .footer {
  margin-top: -20px;
}

.drawer .footer button {
  float: right;
}

.drawer .footer button.clearBtn {
  float: left;
}

.drawer .closebtn {
  font-size: 36px;
  float: right;
}

.drawer .fileDrop,
.drawer [class^="uiIcon"] {
  color: #2f5e92;
}

.drawer .fileDrop .dropZone {
  border-radius: 5px;
  border: 3px dashed #e6e6e6;
  font-size: 14px;
  height: 50px;
  align-items: center;
  justify-content: center;
  display: flex;
}

.drawer .fileDrop .attachFile {
  display: none;
}

.drawer .fileDrop .attachFileIcon:before {
  content: "\e780";
  font-weight: bold;
}

.drawer .fileDrop .uploadContainer .file .info {
  width: 230px;
}

.drawer .fileDrop .uploadContainer .fileNameLabel {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: 150px;
}

.drawer .fileDrop .uploadContainer .file {
  margin-top: 10px;
}

.drawer .fileDrop .uploadContainer .file .fileSize {
  margin-left: 5px;
  margin-right: 5px;
}

.drawer .fileDrop .uploadContainer > .uploadError {
  text-align: center;
}

.drawer .fileDrop .uploadContainer .uploadError {
  color: red;
}

.drawer .uiPopup {
  top: 10% !important;
  left: 50% !important;
  transform: translate(-50%, 0%);
  position: absolute !important;
  z-index: 1;
}

.drawer .uiPopup .form-horizontal .controls [type="date"] {
  width: 145px;
}

.drawer .uiPopup .uiEventReminder {
  width: 325px;
}

.drawer .uiPopup .uiRepeatEventForm [name="endAfterNumber"] {
  margin-left: -18px;
  width: 53px;
}

@media (min-width: 1024px) {
  .drawer .uiPopup .form-horizontal .control-label {
    width: 100px;
  }

  .drawer .uiPopup .form-horizontal .controls {
    margin-left: 110px;
    width: 295px;
  }
}

@media (max-width: 767px) {
  .drawer.open {
    width: 100%;
  }
}

